--- a/templates/detail_page.html
+++ b/templates/detail_page.html
@@ -1,7 +1,18 @@
-{% extends base.html %}
+{% extends 'base.html' %}
 
-<h1>{{ page.title }}</h1>
-<h2>{{ page.author}}</h2>
-<p>
-{{ page.content}}
-</p>
+{% block content %}
+<ol class="breadcrumb">
+  <li class="breadcrumb-item"><a href="/wiki">MakeWIKI</a></li>
+  <li class="breadcrumb-item active">Detail</li>
+</ol>
+
+<div class="card border-primary col-md-11 align-center rounded ml-4 mt-5 pt-3">
+    <h3>{{ page.title }}</h3>
+    <h4>by: {{ page.author}}</h4>
+    <hr>
+    <p>
+    {{ page.content }}
+    </p>
+</div>
+
+{% endblock %}
