--- a/templates/detail_page.html
+++ b/templates/detail_page.html
@@ -8,10 +8,12 @@
 
 <div class="card border-primary col-md-11 align-center rounded ml-4 mt-5 pt-3">
     <h3>{{ page.title }}</h3>
-    <h4>by: {{ page.author}}</h4>
+    submitted by: <h4> {{ page.author}}</h4>
     <hr>
     <p>
     {{ page.content }}
+    <p>
+    {{ page.created }}
     </p>
 </div>
 
